--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '32.0.0'
 
 }
 
 dependencies {
 
+    //图表
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //XUI
     implementation 'com.github.xuexiangjys:XUI:1.1.9'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
